GPencil: Wrong mouse cursor #71336

Closed
opened 2019-11-04 13:38:15 +01:00 by n1729 · 9 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.76

Blender Version
Broken: version: 2.82 (sub 1), branch: master, commit date: 2019-11-03 23:35, hash: e45cfb574e

Short description of error
If you press O, a mouse cursor turns into something to place a reference point of guides, and then it doesn't return to a normal one.
I guess that this might be slightly related to #69965.

Exact steps for others to reproduce the error

  1. Go to Draw mode
  2. Press O (even if you aren't using guides)
    snip2019-11-04.png
**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.76 **Blender Version** Broken: version: 2.82 (sub 1), branch: master, commit date: 2019-11-03 23:35, hash: `e45cfb574e` **Short description of error** If you press O, a mouse cursor turns into something to place a reference point of guides, and then it doesn't return to a normal one. I guess that this might be slightly related to #69965. **Exact steps for others to reproduce the error** 1. Go to Draw mode 2. Press O (even if you aren't using guides) ![snip2019-11-04.png](https://archive.blender.org/developer/F7931135/snip2019-11-04.png)
Author

Added subscriber: @n1729

Added subscriber: @n1729

Added subscribers: @CharlieJolly, @antoniov

Added subscribers: @CharlieJolly, @antoniov

@CharlieJolly Would you mind taking a look at this?

@CharlieJolly Would you mind taking a look at this?
Member

@antoniov I'll take a look. Fix straight into 2.81 or master?

@antoniov I'll take a look. Fix straight into 2.81 or master?
Charlie Jolly self-assigned this 2019-11-06 17:11:27 +01:00
Member
Quick fix: https://developer.blender.org/P1153

@chalie fix in master. This is not a big issue and it's better include in the next release to be sure we don't introduce any new bug.

@chalie fix in master. This is not a big issue and it's better include in the next release to be sure we don't introduce any new bug.

This issue was referenced by d08800b148baf80eea71a470928a4db7a63f5715

This issue was referenced by d08800b148baf80eea71a470928a4db7a63f5715

This issue was referenced by 7ef03eae20

This issue was referenced by 7ef03eae20c8613f52b4cfca3919b9a871860f3e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71336
No description provided.