Fix T71336: GPencil: Wrong mouse cursor